tests/paczka1/fuzzy1/36737606.err
Error in line 1: jGzCSaL S438 87,5
Error in line 7: EDTVhfO7weT S438 94,7
Error in line 9: EDTVhfO7weT S537 69,6
Error in line 4: 0OB1v2ktdF S537 63,6
Error in line 25: S438 S438 46,5
Error in line 29: wMy6ELl5wV S678 226,8
Error in line 37: mL9cZ S438 71,0
Error in line 15: jGzCSaL A716 5,9
Error in line 39: jGzCSaL S438 39,6
